--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "UTMMBackend"
+name = "acorngm-backend"
 version = "0.1.0"
 edition = "2024"
 
@@ -8,5 +8,7 @@ axum = "0.8.3"
 tokio = { version = "1.44.1", features = ["full"] }
 tower-http = { version = "0.6.2", features = ["full"] }
 log = "0.4"
-env_logger = "0.10"
+flexi_logger = "0.30.1"
 once_cell = "1.21.3"
+dotenv = "0.15.0"
+chrono = "0.4.40"
