--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ dotenv = "0.15.0"
 chrono = "0.4.40"
 dropbox-sdk = { version = "0.19.1", features = ["async_routes", "default_async_client"] }
 tokio-util = { version = "0.7.14", features = ["compat"] }
+serde = { version = "1.0.219", features = ["derive"] }
+serde_json = "1.0.140"
