--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ axum = "0.8.3"
 tokio = { version = "1.44.1", features = ["full"] }
 tower-http = { version = "0.6.2", features = ["full"] }
 log = "0.4"
-flexi_logger = "0.30.1"
+flexi_logger = { version = "0.30.1", features = ["colors"] }
 once_cell = "1.21.3"
 dotenv = "0.15.0"
 chrono = "0.4.40"
@@ -16,3 +16,4 @@ dropbox-sdk = { version = "0.19.1", features = ["async_routes", "default_async_c
 tokio-util = { version = "0.7.14", features = ["compat"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
+colored = "3.0.0"
