--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ tokio-util = { version = "0.7.14", features = ["compat"] }
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 colored = "3.0.0"
+serenity = "0.12"
