--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,12 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-axum = "0.8.3"
+rocket = { version = "0.5.1", features = ["serde_json", "json"] }
 tokio = { version = "1.44.1", features = ["full"] }
 tower-http = { version = "0.6.2", features = ["full"] }
 log = "0.4"
 flexi_logger = { version = "0.30.1", features = ["colors"] }
-once_cell = "1.21.3"
 dotenv = "0.15.0"
 chrono = "0.4.40"
 dropbox-sdk = { version = "0.19.1", features = ["async_routes", "default_async_client"] }
@@ -18,3 +17,4 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 colored = "3.0.0"
 reqwest = { version = "0.12.15", features = ["json"] }
+rocket_dyn_templates = "0.2.0"
