--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,4 @@ regex = "1.11.1"
 rand = "0.9.0"
 base64 = "0.22.1"
 sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "macros", "chrono", "json"] }
+once_cell = "1.21.3"
