--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,5 +16,7 @@ reqwest = { version = "0.12.15", features = ["json"] }
 regex = "1.11.1"
 rand = "0.9.0"
 base64 = "0.22.1"
-sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "macros", "chrono", "json"] }
+sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "macros", "chrono", "json", "uuid"] }
 once_cell = "1.21.3"
+uuid = { version = "1.16.0", features = ["v4"] }
+rocket-multipart-form-data = "0.10.7"
