--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,6 @@ edition = "2024"
 
 [dependencies]
 rocket = { version = "0.5.1", features = ["serde_json", "json"] }
-tokio = { version = "1.44.1", features = ["full"] }
 log = "0.4"
 biologischer-log = { git = "https://github.com/BioTomateDE/rust-biologischer-log" }
 chrono = "0.4.40"
@@ -20,6 +19,7 @@ once_cell = "1.21.3"
 uuid = { version = "1.16.0", features = ["v4"] }
 rocket-multipart-form-data = "0.10.7"
 dotenvy = "0.15.7"
+rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
 
 [build-dependencies]
 dotenvy = "0.15.7"
