--- a/Rocket.toml
+++ b/Rocket.toml
@@ -1,8 +1,4 @@
-## defaults for _all_ profiles
 [default]
 address = "0.0.0.0"
 port = 8000
-limits = { form = "64 kB", json = "1 MiB" }
-
-[default.limits]
-data-form = "32 MiB"
+limits = { form = "16 MiB", json = "1 MiB" }
